[package]
name = "yubibomb"
version = "0.2.6"
authors = ["Randy Barlow <bowlofeggs@fedoraproject.org>", "Jeremy Cline <jeremy@jcline.org>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/bowlofeggs/yubibomb"
documentation = "https://docs.rs/yubibomb"
description = """\
              Don't you love when you accidentally tap your Yubikey when you have your IRC client \
              in focus and you send 987947 into Libera? Want to be able to have that experience \
              without having to reach all the way over to your laptop's USB port? Now you can!"""
keywords = ["yubikey", "random", "game"]
categories = ["authentication", "command-line-utilities", "cryptography", "games"]

[dependencies]
rand = "0.8"

[dev-dependencies]
regex = "1"

[profile.release]
lto = true
